# qlyukerbot

./: .env-example  .gitattributes  .gitignore  Dockerfile  LICENSE  README-EN.md  README-RU.md  README.md  README_RU.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run.bat  run.sh
.github/workflows/: sync-from-bitbucket.yml
bot/: __init__.py
bot/config/: config.py  proxies-template.txt  proxies.txt
bot/core/: agents.py  headers.py  helper.py  launcher.py  registrator.py  tapper.py
bot/exceptions/: __init__.py
bot/utils/: __init__.py  ad_viewer.py  async_lock.py  config_utils.py  first_run.py  launcher.py  logger.py  proxy_manager.py  proxy_utils.py  universal_telegram_client.py  updater.py  web.py
bot/utils/loginQR/: __init__.py  __main__.py
bot/utils/loginQR/src/: Colored.py  __init__.py  args.py  client.py  config.py  updater.py  utils.py
