[project]
name = "qlyukerbot2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiocfscrape==1.0.0",
    "aiofiles==24.1.0",
    "aiohttp==3.9.5",
    "aiohttp-proxy==0.1.2",
    "aiosignal==1.3.1",
    "alembic==1.13.1",
    "annotated-types==0.7.0",
    "asyncio==3.4.3",
    "attrs==24.2.0",
    "better-proxy==1.2.0",
    "blinker==1.9.0",
    "certifi==2024.8.30",
    "click==8.1.7",
    "colorama==0.4.6",
    "fasteners==0.19",
    "flask==3.1.0",
    "frozenlist==1.5.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "js2py==0.74",
    "loguru==0.7.2",
    "markupsafe==3.0.2",
    "matplotlib==3.8.2",
    "multidict==6.1.0",
    "opentele==1.15.1",
    "pandas==2.2.0",
    "propcache==0.2.0",
    "pyaes==1.6.1",
    "pyasn1==0.6.1",
    "pydantic-settings==2.4.0",
    "pyjsparser==2.7.1",
    "pyqt5>=5.15.11",
    "pyqt5-qt5>=5.15.16",
    "pyqt5-sip>=12.17.0",
    "pyrogram==2.0.106",
    "pysocks==1.7.1",
    "pytest==7.4.4",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.1",
    "python-socks==2.5.1",
    "qrcode==8.0",
    "rsa==4.9",
    "six==1.16.0",
    "sqlalchemy==2.0.28",
    "telethon==1.36.0",
    "tgcrypto==1.2.5",
    "typing-extensions==4.12.2",
    "tzlocal==5.2",
    "ua-generator==1.0.6",
    "werkzeug==3.1.3",
    "yarl==1.18.0",
]
